--- a/views/verify_email_post.jade
+++ b/views/verify_email_post.jade
@@ -3,9 +3,9 @@ extends auth_layout
 block content
     h2 Email verified
     
-    p Thank you for verifying your email address.
+    p.
+        Thank you for verifying your email address. When logging in the next time,
+        this will be reflected in your user profile.
 
-    p You may now close this window.
-    
-    p
-        small Your email address is now verified. When logging in the next time, this will be reflected in your user profile.
+    h5.
+        You may now close this window.
