--- a/src/views/auth_layout.jade
+++ b/src/views/auth_layout.jade
@@ -1,3 +1,20 @@
+mixin flashMessage(type, message)
+    if type == 'error'
+        div(role='alert').alert.alert-danger
+            span(aria-hidden="true").glyphicon.glyphicon-exclamation-sign
+            span.sr-only Error:
+            | &nbsp; #{message}
+    else if type == 'warning'
+        div(role='alert').alert.alert-warning
+            span(aria-hidden="true").glyphicon.glyphicon-warning-sign
+            span.sr-only Warning:
+            | &nbsp; #{message}
+    else
+        div(role='alert').alert.alert-success
+            span(aria-hidden="true").glyphicon.glyphicon-check
+            span.sr-only Success:
+            | &nbsp; #{message}
+    
 doctype html
 html
   head
@@ -5,9 +22,6 @@ html
     title Authorization Server
     link(rel='stylesheet', href='#{baseUrl}/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='#{baseUrl}/content/wicked.css')
-    //- link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/default.min.css")
-    //- link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css")
-    //- script(src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/highlight.min.js")
     
     block scripts
 
