Disallow signup/registration and namespace handling

--- a/src/views/login.jade
+++ b/src/views/login.jade
@@ -61,5 +61,7 @@ block content
     
     h5
         a(href='#{baseUrl}/#{forgotPasswordUrl}') Forgot password?
-    h5
-        a(href='#{baseUrl}/#{signupUrl}') Create a new user.
+        
+    if !disallowSignup
+        h5
+            a(href='#{baseUrl}/#{signupUrl}') Create a new user.
