--- a/src/views/login.jade
+++ b/src/views/login.jade
@@ -62,6 +62,6 @@ block content
     h5
         a(href='#{baseUrl}/#{forgotPasswordUrl}') Forgot password?
         
-    if !disallowSignup
+    if !disableSignup
         h5
             a(href='#{baseUrl}/#{signupUrl}') Create a new user.
