--- a/src/views/auth_layout.jade
+++ b/src/views/auth_layout.jade
@@ -25,8 +25,7 @@ html
     
     block scripts
 
-  body(style='background-color:#eeeeee')
-
+  body.wicked-auth
     .container
         span.center-block
 
