Ad-hoc localization to german (specify LANGUAGE env var)

--- a/src/views/forgot_password_post.jade
+++ b/src/views/forgot_password_post.jade
@@ -1,15 +1,15 @@
 extends auth_layout
 
 block content
-    h2 Forgotten Password
+    h2 #{i18n.title}
     
-    p In case your email address is known and associated with a password, you will have been sent a password reset link. 
+    p #{i18n.description1}
     
-    h5 Please allow a couple of minutes for delivery before trying again.
+    h5 #{i18n.description2}
 
-    h5 The password reset link will be valid for 60 minutes; after that, it expires.
+    h5 #{i18n.description3}
 
     br
 
     h5
-        a(href='#{baseUrl}/#{forgotPasswordUrl}') Try again.
+        a(href='#{baseUrl}/#{forgotPasswordUrl}') #{i18n.try_again}
