--- a/src/views/logout.jade
+++ b/src/views/logout.jade
@@ -1,6 +1,6 @@
 extends auth_layout
 
 block content
-    h2 Logged out
+    h2 #{i18n.logged_out}
     
-    p You have logged been out successfully.
+    p #{i18n.success}
