--- a/src/views/verify_password_reset.jade
+++ b/src/views/verify_password_reset.jade
@@ -9,20 +9,20 @@ block scripts
             var passwordError = '';
             var password2Error = '';
             if (!password)
-                passwordError = 'Please enter your password.';
+                passwordError = '#{i18n.enter_password}';
             if (!password2)
-                password2Error = 'Please repeat your password.';
+                password2Error = '#{i18n.repeat_password}';
             if (!password2Error && password !== password2)
-                password2Error = 'Passwords do not match';
+                password2Error = '#{i18n.passwords_dont_match}';
             if (!password
                 || (password.length < 6 || password.length > 24))
-                passwordError = 'Please enter a password, more than 5, less than 25 characters long.';
+                passwordError = '#{i18n.password_rules}';
 
             try {
                 $('#errorPassword').text(passwordError);
                 $('#errorPassword2').text(password2Error);
             } catch (err) {
-                alert('Validation errored! Check your input values.');
+                alert('#{i18n.validation_error}');
                 return false;
             }
             
@@ -34,9 +34,9 @@ block scripts
 
 
 block content
-    h2 Reset Password
+    h2 #{i18n.title}
     
-    p Please specify a new password for your user.
+    p #{i18n.description}
 
     form(role='form' action='#{baseUrl}/#{verifyPostUrl}' method='post' onsubmit='return validatePassword();')
 
@@ -45,12 +45,12 @@ block content
         input(type='hidden' name='type' value='lostpassword')
 
         .form-group
-            label(for='password') Password:
+            label(for='password') #{i18n.password}:
             input(type='password' name='password' id='password').form-control
             small
                 span(id='errorPassword' style='color:red')
         .form-group
-            label(for='password2') Password (repeat):
+            label(for='password2') #{i18n.password_repeat}:
             input(type='password' name='password2' id='password2').form-control
             small
                 span(id='errorPassword2' style='color:red')
@@ -58,4 +58,4 @@ block content
             div(class='g-recaptcha' data-sitekey='#{recaptcha.websiteKey}')
             br
 
-        button(class='btn btn-lg btn-primary btn-block' type='submit') Change Password
+        button(class='btn btn-lg btn-primary btn-block' type='submit') #{i18n.change_password}
