--- a/src/views/verify_password_reset_post.jade
+++ b/src/views/verify_password_reset_post.jade
@@ -1,12 +1,12 @@
 extends auth_layout
 
 block content
-    h2 Password changed
+    h2 #{i18n.title}
     
-    p Your password has successfully been updated.
+    p #{i18n.success}
 
-    p You may now close this window.
+    p #{i18n.close_window}
     
-    h5 You can now log in using your username (email address) and your new password.
+    h5 #{i18n.remark}
 
     //- TODO: A link to the login page/to the calling application?
