--- a/src/views/email_missing.jade
+++ b/src/views/email_missing.jade
@@ -8,17 +8,17 @@ block scripts
             var emailError = '';
             var email2Error = '';
             if (!email)
-                emailError = 'Please enter a value for the email address. ';
+                emailError = '#{i18n.enter_email_address}';
             else if (!/.+@.+/.test(email))
-                emailError = 'Email address invalid. ';
+                emailError = '#{i18n.email_invalid}';
             if (!email2)
-                email2Error = 'Please confirm your email address.';
+                email2Error = '#{i18n.confirm_email}';
 
             try {
                 $('#errorEmail').text(emailError);
                 $('#errorEmail2').text(email2Error);
             } catch (err) {
-                alert('Validation errored! Check your input values.');
+                alert('#{i18n.validation_error}');
                 return false;
             }
             
@@ -29,11 +29,10 @@ block scripts
         }
 
 block content
-    h2 Specify Email Address
+    h2 #{i18n.specify_email}
     
         p.
-            Using the API requires you to specify a valid email address, but your chosen identity provider
-            does not provide one. The address <b>cannot be changed</b> after specifying it.
+            !{i18n.specify_email_desc}
 
         h4.
             By having signed up and registering, you agree to our <a target='_blank' href='#{portalUrl}content/terms-and-conditions'>Terms
@@ -43,16 +42,16 @@ block content
             input(type='hidden' name='_csrf' value='#{csrfToken}')
 
             .form-group
-                label(for='email') Email address:
+                label(for='email') #{i18n.email_address}:
                 input(type='string' name='email' id='email').form-control
                 small 
                     span(id='errorEmail' style='color:red')
             .form-group
-                label(for='email') Email address (confirm):
+                label(for='email') #{i18n.email_address_confirm}:
                 input(type='string' name='email2' id='email2').form-control
                 small 
                     span(id='errorEmail2' style='color:red')
                         
             button(class='btn btn-lg btn-primary btn-block' type='submit') 
                 span(aria-hidden="true").glyphicon.glyphicon-envelope
-                | &nbsp; Save Email Address
+                | &nbsp; #{i18n.save_email_address}
