--- a/src/views/forgot_password.jade
+++ b/src/views/forgot_password.jade
@@ -6,14 +6,14 @@ block scripts
             var email = $('#email').val();
             var emailError = '';
             if (!email)
-                emailError = 'Please enter a value for the email address. ';
+                emailError = '#{i18n.enter_email_address}';
             else if (!/.+@.+/.test(email))
-                 emailError = 'Email address invalid.';
+                 emailError = '#{i18n.email_invalid}';
 
             try {
                 $('#errorEmail').text(emailError);
             } catch (err) {
-                alert('Validation errored! Check your input values.');
+                alert('#{i18n.validation_error}');
                 return false;
             }
             
@@ -23,19 +23,19 @@ block scripts
         }
 
 block content
-    h2 Forgotten Password
+    h2 #{i18n.forgot_password}
     
-    p Please supply your email address in the below form.
+    p #{i18n.please_supply_password}
 
-    h5 In case your email address is known and associated with a password, you will be sent a password reset link.
+    h5 #{i18n.description}
 
     form(role='form' action='#{baseUrl}/#{forgotPasswordUrl}' method='post' onsubmit='return validateEmail();')
 
         input(type='hidden' name='_csrf' value='#{csrfToken}')
         .form-group
-            label(for='email') Email address:
+            label(for='email') #{i18n.email_address}:
             input(type='string' name='email' id='email').form-control
             small 
                 span(id='errorEmail' style='color:red')
 
-        button(class='btn btn-lg btn-primary btn-block' type='submit') Send Reset Email
+        button(class='btn btn-lg btn-primary btn-block' type='submit') #{i18n.send_email}
