Display app name with login screen (and some others)
- Prepare using a custom URL for the top logo

--- a/src/views/login.jade
+++ b/src/views/login.jade
@@ -33,7 +33,7 @@ block scripts
 block content
     h2 #{i18n.log_in}
     
-    p #{i18n.welcome_to} #{title}.
+    p #{i18n.welcome_to} #{app_name}.
 
     if displayRedirectMessage
         h4 #{i18n.redirect_message}
