--- a/src/views/verify_password_reset.jade
+++ b/src/views/verify_password_reset.jade
@@ -14,8 +14,8 @@ block scripts
                 password2Error = '#{i18n.repeat_password}';
             if (!password2Error && password !== password2)
                 password2Error = '#{i18n.passwords_dont_match}';
-            if (!password
-                || (password.length < 6 || password.length > 24))
+            var regex = new RegExp('#{i18n.password_regex}');
+            if (regex.test(password))
                 passwordError = '#{i18n.password_rules}';
 
             try {
