Updated styles and layout to be compatible with twitter-bootstrap 4

--- a/src/views/auth_layout.jade
+++ b/src/views/auth_layout.jade
@@ -1,17 +1,17 @@
 mixin flashMessage(type, message)
     if type == 'error'
         div(role='alert').alert.alert-danger
-            span(aria-hidden="true").glyphicon.glyphicon-exclamation-sign
+            span(aria-hidden="true").fas.fa-exclamation-circle
             span.sr-only Error:
             | &nbsp; #{message}
     else if type == 'warning'
         div(role='alert').alert.alert-warning
-            span(aria-hidden="true").glyphicon.glyphicon-warning-sign
+            span(aria-hidden="true").fas.fa-exclamation-triangle
             span.sr-only Warning:
             | &nbsp; #{message}
     else
         div(role='alert').alert.alert-success
-            span(aria-hidden="true").glyphicon.glyphicon-check
+            span(aria-hidden="true").far.fa-check-square
             span.sr-only Success:
             | &nbsp; #{message}
     
@@ -20,14 +20,15 @@ html
   head
     title #{title}
     title Authorization Server
-    link(rel='stylesheet', href='#{baseUrl}/bootstrap/css/bootstrap.min.css')
+    link(rel='stylesheet', href='#{baseUrl}/assets/style.css')
     link(rel='stylesheet', href='#{baseUrl}/content/wicked.css')
+    script(defer src='https://use.fontawesome.com/releases/v5.5.0/js/all.js' integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous")
     
     block scripts
 
-  body.wicked-auth
+  body.wicked-auth.pt-5
     .container
-        span.center-block
+        span.mx-auto
 
     .container
         .row
@@ -36,9 +37,9 @@ html
                     a(href='#{portalUrl}')
                         img(src='#{baseUrl}/content/images/wicked-auth-page-120.png')
                         //img(src='/images/wicked-text-64.png')
-            .col-md-6.col-md-offset-3
-                .panel.panel-default
-                    .panel-body
+            .col-md-6.mx-auto
+                .card
+                    .card-body
                         .jumbotron.wicked-login-title
                             
                             block content
