--- a/src/views/email_missing.jade
+++ b/src/views/email_missing.jade
@@ -53,5 +53,5 @@ block content
                     span(id='errorEmail2' style='color:red')
                         
             button(class='btn btn-lg btn-primary btn-block' type='submit') 
-                span(aria-hidden="true").glyphicon.glyphicon-envelope
+                span(aria-hidden="true").fas.fa-envelope
                 | &nbsp; #{i18n.save_email_address}
