--- a/src/views/forgot_password.jade
+++ b/src/views/forgot_password.jade
@@ -25,9 +25,9 @@ block scripts
 block content
     h2 #{i18n.forgot_password}
     
-    p #{i18n.please_supply_password}
+    h5.mb-3 #{i18n.please_supply_password}
 
-    h5 #{i18n.description}
+    h6.mb-3.text-secondary #{i18n.description}
 
     form(role='form' action='#{baseUrl}/#{forgotPasswordUrl}' method='post' onsubmit='return validateEmail();')
 
