--- a/src/views/forgot_password_post.jade
+++ b/src/views/forgot_password_post.jade
@@ -3,13 +3,13 @@ extends auth_layout
 block content
     h2 #{i18n.title}
     
-    p #{i18n.description1}
+    h5.mb-3.text-secondary #{i18n.description1}
     
-    h5 #{i18n.description2}
+    h6 #{i18n.description2}
 
-    h5 #{i18n.description3}
+    h6 #{i18n.description3}
 
     br
 
-    h5
+    h6
         a(href='#{baseUrl}/#{forgotPasswordUrl}') #{i18n.try_again}
