--- a/src/views/verify_password_reset.jade
+++ b/src/views/verify_password_reset.jade
@@ -36,7 +36,7 @@ block scripts
 block content
     h2 #{i18n.title}
     
-    p #{i18n.description}
+    h5.mb-3 #{i18n.description}
 
     form(role='form' action='#{baseUrl}/#{verifyPostUrl}' method='post' onsubmit='return validatePassword();')
 
