--- a/src/views/login.jade
+++ b/src/views/login.jade
@@ -33,7 +33,7 @@ block scripts
 block content
     h2 #{i18n.log_in}
     
-    p #{i18n.welcome_to} #{app_name}.
+    h5.mb-4 #{i18n.welcome_to} #{app_name}.
 
     if displayRedirectMessage
         h4 #{i18n.redirect_message}
@@ -62,9 +62,9 @@ block content
     br
     
     if forgotPasswordUrl
-        h5
+        h6
             a(href='#{baseUrl}/#{forgotPasswordUrl}') #{i18n.forgot_password}
         
     if !disableSignup
-        h5
+        h6
             a(href='#{baseUrl}/#{signupUrl}') #{i18n.create_new_user}
