--- a/src/views/verify_email.jade
+++ b/src/views/verify_email.jade
@@ -3,9 +3,9 @@ extends auth_layout
 block content
     h2 Verify Email
     
-    p Click the button below to verify your email address: 
+    h5.mb-2 Click the button below to verify your email address:
     
-    p <code>#{email}</code>
+    h5.mb-3 <code>#{email}</code>
 
     form(role='form' action='#{baseUrl}/#{verifyPostUrl}' method='post')
 
