--- a/src/views/verify_email_request.jade
+++ b/src/views/verify_email_request.jade
@@ -4,15 +4,15 @@ block content
     h2 Verify Email Address
     
     if profile.email_verified
-        p Your email address has already been verified.
+        h5.mb-3 Your email address has already been verified.
         
         h5 You may close this window.
     else
-        p Click the button, and we will send you an email with instructions on how to verify your email address.
+        h5.mb-3 Click the button, and we will send you an email with instructions on how to verify your email address.
         
         form(role='form' action='#{baseUrl}/#{verifyEmailUrl}' method='post')
             input(type='hidden' name='_csrf' value='#{csrfToken}')
 
             button(class='btn btn-lg btn-primary btn-block' type='submit') 
-                span(aria-hidden="true").glyphicon.glyphicon-envelope
+                span(aria-hidden="true").fas.fa-envelope
                 | &nbsp; Send verification link
